# watson

./: CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: tygydyk.yml
surrounded/: Cargo.toml
surrounded/docs/: .$design.drawio.bkp  design.drawio  design.md
surrounded/src/: lib.rs  main.rs
surrounded/src/feature/: mod.rs  plugin.rs
surrounded/src/feature/creep/: mod.rs  plugin.rs
surrounded/src/feature/ding_ding/: mod.rs  plugin.rs
surrounded/src/feature/map/: mod.rs  plugin.rs
surrounded/src/feature/stranger/: mod.rs  plugin.rs
surrounded/src/util/: error.rs  result.rs
tygydyk/: .env.dist  Cargo.toml  README.md
tygydyk/src/: lib.rs  main.rs
tygydyk/src/feature/: mod.rs  plugin.rs
tygydyk/src/feature/camera/: bundle.rs  component.rs  consts.rs  mod.rs  plugin.rs  system.rs
tygydyk/src/feature/client/: menu.rs  mod.rs  window.rs
tygydyk/src/feature/input/: mod.rs  plugin.rs  resource.rs
tygydyk/src/feature/kitten/: component.rs  consts.rs  mod.rs  plugin.rs  system.rs
tygydyk/src/feature/movement/: component.rs  mod.rs  plugin.rs  system.rs
tygydyk/src/feature/platform/: component.rs  plugin.rs  system.rs
tygydyk/src/feature/plugin/: client.rs  mod.rs
tygydyk/src/feature/server/: mod.rs  plugin.rs
tygydyk/src/util/: consts.rs  error.rs  mod.rs  physics.rs  result.rs  state.rs
untitled/: Cargo.toml
untitled/src/: main.rs
untitled/src/feature/: mod.rs  plugin.rs
untitled/src/util/: error.rs  result.rs
