[workspace]
members = ["surrounded", "untitled"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.12" }
bevy_editor_pls = { version = "0.7" }
leafwing-input-manager = { version = "0.11" }
thiserror = { version = "1" }
