[workspace]
members = ["surrounded", "tygydyk"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.13" }
bevy_editor_pls = { version = "0.8" }
leafwing-input-manager = { version = "0.13" }
thiserror = { version = "1" }
