[package]
name = "tygydyk"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["wayland"] }
thiserror.workspace = true

bevy_rapier3d = { version = "0.25", optional = true }
bevy_editor_pls = { version = "0.8", optional = true }
bevy_pkv = { version = "0.10.0" }
bevy_quinnet = { version = "0.7" }
leafwing-input-manager = { version = "0.13", optional = true }
serde = { version = "1.0.195", features = ["derive"] }

[features]
client = ["bevy_editor_pls", "leafwing-input-manager"]
server = []
shared = ["bevy_rapier3d"]
all = ["bevy_rapier3d", "bevy_editor_pls", "leafwing-input-manager"]

[[bin]]
name = "client"
required-features = ["client", "shared"]

[[bin]]
name = "server"
required-features = ["server", "shared"]

